# client_serial_link

./: CITATION.cff  CMakeLists.txt  README.md  package.xml  run_trajectory_tracking_client.sh
config/: iiwa_endpoint_poses.yaml  iiwa_joint_configurations.yaml  tracking_tolerances.yaml
config/kuka_iiwa_14/: iiwa_endpoint_poses.yaml  iiwa_joint_configurations.yaml
doc/: .$ClassDiagrams.drawio.bkp  .$follow_transform_client.drawio.bkp  ClassDiagrams.drawio  client_class_diagrams.drawio  follow_transform_client.drawio
include/: ActionClientBase.h  ActionClientBase.tpp  ActionClientInterface.h  TrackCartesianTrajectory.h  TrackJointTrajectory.h  Utilities.h
include/serial_link_action_client/: action_client_base.hpp  action_client_base.tpp  action_client_interface.hpp  follow_transform.hpp  follow_twist.hpp  track_cartesian_trajectory.hpp  track_joint_trajectory.hpp  utilities.hpp
src/: ActionClientBase.cpp  ModelUpdater.cpp  TrackCartesianTrajectory.cpp  TrackJointTrajectory.cpp  Utilities.cpp  follow_transform.cpp  follow_twist.cpp  track_cartesian_trajectory.cpp  track_joint_trajectory.cpp  trajectory_tracking_client.cpp  utilities.cpp
src/nodes/: follow_transform_client.cpp  follow_twist_client.cpp  trajectory_tracking_client.cpp
